fixed bug making bg height 100% on mobile

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,11 +4,6 @@
 
 html{
     height: 100%;
-    width: 100%;
-}
-
-head{
-    height: 100%;
 }
 
 body{
@@ -16,7 +11,7 @@ body{
     /*background-color: black;*/
     background-repeat: no-repeat;
     margin: 0 auto;
-    height: 100%;
+    min-height: 100%;
 }
 
 #header{
